Improve organization API quality: authorization server specification alignment
- Fixed authorization server API specification and implementation alignment
- Documented comprehensive API quality improvement strategy
- Enhanced E2E test coverage for OpenAPI specification verification

- **AuthorizationServerConfiguration.toMap()**: Fixed multiple key-value mapping errors
  - Fixed `id_token_encryption_alg_values_supported` field reference
  - Fixed `token_endpoint_auth_signing_alg_values_supported` field reference
  - Fixed `backchannel_authentication_endpoint` field reference
  - Added missing `extension` field inclusion
- **AuthorizationServerExtensionConfiguration**: Made fields public for Jackson access
- **JSON Schema**: Fixed `claims_locales_supported` type from string to array

- Added organization-level authorization server, role, and permission management APIs
- Fixed field naming inconsistencies (`enabled_*` prefix removed)
- Updated extension field definitions to match implementation
- Added comprehensive request/response schemas and error handling

- Extended authorization server test with comprehensive OpenAPI parameter verification
- Added debug logging for request/response validation
- Covered all standard OpenID Connect Discovery fields
- Verified extension fields functionality

- Added comprehensive API quality improvement strategy guide
- Documented implementation-first approach for missing OpenAPI specifications
- Established priority rules for implementation vs OpenAPI conflicts
- Created reusable patterns for future API quality improvements

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>

Implement comprehensive organization-level User Management API

- Add 6 missing endpoints to organization-level User Management API
  - PATCH /users/{userId} (partial update)
  - PUT /users/{userId}/password
  - PATCH /users/{userId}/roles
  - PATCH /users/{userId}/tenant-assignments
  - PATCH /users/{userId